--- a/app.json
+++ b/app.json
@@ -43,6 +43,13 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "@sentry/react-native/expo",
+        {
+          "organization": "serisuriacom",
+          "project": "react-native-focusai"
+        }
       ]
     ],
     "experiments": {
