feat: enhance auth robustness, integrate RevenueCat identity sync, and add new native dependencies

--- a/app.json
+++ b/app.json
@@ -50,6 +50,14 @@
           "organization": "serisuriacom",
           "project": "react-native-focusai"
         }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static"
+          }
+        }
       ]
     ],
     "experiments": {
